--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -22,7 +22,7 @@
         </li>
       </ul>
     </div>
-    <!-- /.navbar-collapse -->
+    <!-landingpagevbar-collapse -->
   </div>
   <!-- /.container-fluid -->
 </nav>
