[Feature] change landing page css file

--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -18,11 +18,14 @@
           <a class="page-scroll" href="#services">Services</a>
         </li>
         <li>
-          <a class="page-scroll" href="#contact">Contact</a>
+          <a routerLink="/login" class="page-scroll" >Sign in</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#contact">Sign up</a>
         </li>
       </ul>
     </div>
-    <!-landingpagevbar-collapse -->
+    <!--landingpagevbar-collapse -->
   </div>
   <!-- /.container-fluid -->
 </nav>
@@ -107,23 +110,3 @@
     </div>
   </div>
 </aside>
-
-<section id="contact">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">Let's Get In Touch!</h2>
-        <hr class="primary">
-        <p>Ready to join our engaging team? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-      </div>
-      <div class="col-lg-4 col-lg-offset-2 text-center">
-        <i class="fa fa-phone fa-3x sr-contact"></i>
-        <p>123-456-6789</p>
-      </div>
-      <div class="col-lg-4 text-center">
-        <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-        <p><a href="">info@bucketlist.com</a></p>
-      </div>
-    </div>
-  </div>
-</section>
