--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
-<h1>
-  {{title}}
-</h1>
+<!--<app-landing-page></app-landing-page>-->
+
+<router-outlet></router-outlet>
