[Feature] implement login feature

--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -12,16 +12,16 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a class="page-scroll" href="#about">About</a>
+          <a class="page-scroll" href="#about"><i class='fa fa-info'></i> About</a>
         </li>
         <li>
-          <a class="page-scroll" href="#services">Services</a>
+          <a class="page-scroll" href="#services"><i class='fa fa-th-list'></i> Services</a>
         </li>
         <li>
-          <a routerLink="/login" class="page-scroll" >Sign in</a>
+          <a routerLink="/login"><i class='fa fa-sign-in'></i> Sign in</a>
         </li>
         <li>
-          <a class="page-scroll" href="#contact">Sign up</a>
+          <a routerLink="/signup"><i class='fa fa-sign-out'></i> Sign up</a>
         </li>
       </ul>
     </div>
@@ -36,7 +36,7 @@
       <h1 id="homeHeading">Your Favourite Spot For Bucketlist Tracking</h1>
       <hr>
       <p>Bucketlist help you keep track of your elusive desires! Just sign up and get started!</p>
-      <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+      <a href="#about" class="btn btn-primary btn-xl page-scroll"><i class='fa fa-angle-double-down'></i> Find Out More</a>
     </div>
   </div>
 </header>
@@ -53,7 +53,7 @@
           consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.!</p>
-        <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+        <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">What we offer!</a>
       </div>
     </div>
   </div>
@@ -106,7 +106,7 @@
   <div class="container text-center">
     <div class="call-to-action">
       <h2>Free Signup!</h2>
-      <a href="" class="btn btn-default btn-xl sr-button">Click to join!</a>
+      <a routerLink="/signup" class="btn btn-default btn-xl sr-button"><i class='fa fa-user-plus'></i> Click to join!</a>
     </div>
   </div>
 </aside>
