--- a/src/app/landingpage/landingpage.component.css
+++ b/src/app/landingpage/landingpage.component.css
@@ -146,19 +146,19 @@ aside {
     color: #F05F40;
   }
 }
-/*header {*/
-  /*position: relative;*/
-  /*width: 100%;*/
-  /*min-height: auto;*/
-  /*-webkit-background-size: cover;*/
-  /*-moz-background-size: cover;*/
-  /*background-size: cover;*/
-  /*-o-background-size: cover;*/
-  /*background-position: center;*/
-  /*background-image: url('../../img/coverpage/main_image.jpg');*/
-  /*text-align: center;*/
-  /*color: white;*/
-/*}*/
+header {
+  position: relative;
+  width: 100%;
+  min-height: auto;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+  background-image: url('../../img/coverpage/main_image.jpg');
+  text-align: center;
+  color: white;
+}
 header .header-content {
   position: relative;
   text-align: center;
