--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,7 +14,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="/signup"><i class='fa fa-sign-out'></i> Sign up</a></li>
+        <li><a routerLink="/login"><i class='fa fa-sign-in'></i> Sign in</a></li>
       </ul>
     </div>
   </div>
@@ -22,14 +22,16 @@
 
 <div class="container">
 
-  <form class="form-signin" (submit)="signIn()">
-    <h1 class="form-signin-heading text-muted sign-in-text"><i class='fa fa-lock'></i> Sign in {{loginResponse}}</h1>
-    <input type="text" class="form-control" placeholder="Username" name="username" required="" autofocus=""
-           [(ngModel)]="username">
-    <input type="password" class="form-control" placeholder="Password" required="" name="password"
-           [(ngModel)]="password" >
+  <form class="form-signin">
+    <h1 class="form-signin-heading text-muted sign-in-text"><i class='fa fa-user-circle'></i> Sign up</h1>
+    <input type="text" class="form-control" placeholder="First Name" required="" autofocus="">
+    <input type="text" class="form-control" placeholder="Last Name" required="" autofocus="">
+    <input type="text" class="form-control" placeholder="Username" required="" autofocus="">
+    <input type="text" class="form-control" placeholder="Email Address" required="" autofocus="">
+    <input type="password" class="form-control" placeholder="Password" required="">
+    <input type="password" class="form-control" placeholder="Confirm Password" required="">
     <button class="btn btn-lg btn-primary btn-block" type="submit">
-      Sign In
+      Register
     </button>
   </form>
 
