--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -15,7 +15,7 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default"><i class="fa fa-search"></i> Search</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
@@ -120,7 +120,7 @@
                     <h3 class="name">{{item.item_name}}</h3>
                     <p class="profession">{{item.date_created}}</p>
                     <p class="text-center">{{item.done ? 'DONE': 'INCOMPLETE'}}</p>
-                    <button class="btn btn-sm btn-info">update item</button>
+                    <button class="btn btn-sm btn-info" (click)="redirectToUpdateItems(item.bucketlist, item.item_id)">update item</button>
                 </div>
                 <div class="footer">
                     <button class="btn btn-primary" onclick="rotateCard(this)">
