--- a/src/app/tiles/tiles.component.html
+++ b/src/app/tiles/tiles.component.html
@@ -15,7 +15,7 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default"><i class="fa fa-search"></i> Search</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
@@ -52,7 +52,7 @@
                   <p class="text-center">
                     The bucket list contains {{bucket.bucketlist_items.length}} activities
                   </p>
-                   <button class="btn btn-sm btn-info text-center">update bucketlist</button>
+                   <button class="btn btn-sm btn-info text-center" (click)="redirectToBucket(bucket.bucketlist_id)">update bucketlist</button>
                 </div>
                 <div class="footer">
                   <button class="btn btn-primary" (click)="redirectToItems(bucket.bucketlist_id)" >
