--- a/src/app/create-bucketlist/create-bucketlist.component.html
+++ b/src/app/create-bucketlist/create-bucketlist.component.html
@@ -21,13 +21,9 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i> User <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a routerLink="/create_bucketlist">Create Bucketlist</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a routerLink="/logout">Logout</a></li>
           </ul>
         </li>
       </ul>
@@ -43,32 +39,27 @@
           <div class="card">
             <div class="front">
               <div class="cover">
-                  <img src="../../img/coverpage/sky-diving.jpg"/>
+                  <img src="../../img/coverpage/main_image.jpg"/>
               </div><!-- end cover -->
               <div class="content">
                 <div class="main">
 
-                  <form class="form-horizontal">
+                  <form class="form-horizontal" (submit)=" createBucketlist(bucketlist_id)">
                     <fieldset>
                       <!-- Form Name -->
-                      <legend>Update bucketlist item {{item_name}} {{item_description}}</legend>
+                      <legend>Create bucketlist</legend>
 
                       <div class="form-group">
-                        <label class="col-md-4 control-label" for="Item Name">Item Name</label>
+                        <label class="col-md-4 control-label" for="Bucket_Name">Bucket Name</label>
                         <div class="col-md-4">
-                          <input id="Item Name" name="Item_Name" type="text" placeholder="Name" class="form-control input-md" required="" value={{item.item_name}}>
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label class="col-md-4 control-label" for="Item Description">Item Name</label>
-                        <div class="col-md-4">
-                          <input id="Item Description" name="Item_Description" type="text" placeholder="Description" class="form-control input-md" required="" value="{{item.description}}">
+                          <input id="Bucket_Name" name="bucket_name" type="text" placeholder="Name" class="form-control input-md" required=""
+                            [(ngModel)]="bucket_name">
                         </div>
                       </div>
                       <div class="form-group">
                         <label class="col-md-4 control-label"></label>
                         <div class="col-md-4">
-                          <button id="update_item" name="Update_Item" class="btn btn-primary"><i class="fa fa-send-o"></i> Update</button>
+                          <button id="update_item" type="submit" name="Update_Item" class="btn btn-primary"><i class="fa fa-send-o"></i> Update</button>
                         </div>
                       </div>
                     </fieldset>
@@ -82,4 +73,3 @@
     </div>
   </div>
 </div>
-
