--- a/src/app/create-item/create-item.component.css
+++ b/src/app/create-item/create-item.component.css
@@ -6886,20 +6886,6 @@ button.close {
 	z-index: 2;
 }
 
-/* back, initially hidden pane */
-.back {
-		-webkit-transform: rotateY( 180deg );
-   -moz-transform: rotateY( 180deg );
-     -o-transform: rotateY( 180deg );
-        transform: rotateY( 180deg );
-        z-index: 3;
-}
-
-.back .btn-simple{
-    position: absolute;
-    left: 0;
-    bottom: 4px;
-}
 /*        Style       */
 
 
@@ -6910,14 +6896,14 @@ button.close {
 }
 .card-container, .front, .back {
 	width: 100%;
-	height: 370px;
+	height: 590px;
 	border-radius: 4px;
 	-webkit-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 -moz-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 }
 .card .cover{
-    height: 105px;
+    height: 188px;
     overflow: hidden;
     border-radius: 4px 4px 0 0;
 }
@@ -7121,17 +7107,25 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
     }
 }
 
-/* Modal header*/
-.modal-header {
-   background-image: url('../../img/coverpage/sky-diving.jpg');
-   background-size: 100% auto;
-   background-repeat: no-repeat;
-   height: 105px;
+.custom-header-panel{
+    background-color: #004b8e !important;
+    border-color: #004b8e !important;
+    color: white;
 }
 
-.modal-title {
-  color: #d9edf7;
+.no-margin-form-group {
+    margin: 0 !important;
 }
-.close {
-  color: #ffffff;
+.requerido {
+    color: red;
+}
+.btn-orange-md {
+    background: #FF791F !important;
+    border-bottom: 3px solid #ae4d13 !important;
+    color: white;
+}
+
+.btn-orange-md:hover {
+    background: #d86016 !important;
+    color: white !important;
 }
