--- a/src/app/create-item/create-item.component.html
+++ b/src/app/create-item/create-item.component.html
@@ -21,19 +21,20 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i> User <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a routerLink="/create_bucketlist">Create Bucketlist</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a routerLink="/logout">Logout</a></li>
           </ul>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+
+<div class="alert alert-dismissible alert-info">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  {{response_message}}
+</div>
 
 <div class="container">
   <div class="row">
@@ -43,21 +44,28 @@
           <div class="card">
             <div class="front">
               <div class="cover">
-                  <img src="../../img/coverpage/main_image.jpg"/>
+                  <img src="../../img/coverpage/sky-diving.jpg"/>
               </div><!-- end cover -->
               <div class="content">
                 <div class="main">
 
-                  <form class="form-horizontal" (submit)="updateBucket(bucketlist_id)">
+                  <form class="form-horizontal" (submit)="createItem(bucketlist_id)">
                     <fieldset>
                       <!-- Form Name -->
-                      <legend>Update bucketlist</legend>
+                      <legend>Create bucketlist item</legend>
 
                       <div class="form-group">
-                        <label class="col-md-4 control-label" for="Bucket_Name">Bucket Name</label>
+                        <label class="col-md-4 control-label" for="Item Name">Item Name</label>
                         <div class="col-md-4">
-                          <input id="Bucket_Name" name="bucket_name" type="text" placeholder="Name" class="form-control input-md" required="" value="{{name}}"
-                            [(ngModel)]="name">
+                          <input id="Item Name" name="item_name" type="text" placeholder="Name" class="form-control input-md" required=""
+                            [(ngModel)]="item_name">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md-4 control-label" for="Item Description">Item Name</label>
+                        <div class="col-md-4">
+                          <input id="Item Description" name="item_description" type="text" placeholder="Description" class="form-control input-md" required=""
+                            [(ngModel)]="item_description">
                         </div>
                       </div>
                       <div class="form-group">
@@ -77,3 +85,4 @@
     </div>
   </div>
 </div>
+
