--- a/src/app/tiles/tiles.component.html
+++ b/src/app/tiles/tiles.component.html
@@ -21,13 +21,9 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i> User <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a routerLink="/create_bucketlist">Create Bucketlist</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a routerLink="/logout">Logout</a></li>
           </ul>
         </li>
       </ul>
@@ -37,8 +33,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 col-sm-offset-1"  *ngFor="let bucket of allBucketlists">
-      <div class="col-md-4 col-sm-6">
+    <div class="col-sm-10 col-sm-offset-1">
+      <div class="col-md-4 col-sm-6" *ngFor="let bucket of allBucketlists">
         <div class="card-container manual-flip">
           <div class="card">
             <div class="front">
@@ -52,7 +48,16 @@
                   <p class="text-center">
                     The bucket list contains {{bucket.bucketlist_items.length}} activities
                   </p>
-                   <button class="btn btn-sm btn-info text-center" (click)="redirectToBucket(bucket.bucketlist_id)">update bucketlist</button>
+                  <div class="btn-group">
+                    <a class="btn btn-info">More Actions</a>
+                    <a class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a (click)="redirectToBucket(bucket.bucketlist_id)">Update Bucketlist</a></li>
+                      <li><a routerLink="/create_item/{{bucket.bucketlist_id}}">Create Item</a></li>
+                      <li class="divider"></li>
+                      <li><a (click)="deleteBucketlist(bucket.bucketlist_id)">Delete Bucketlist</a></li>
+                    </ul>
+                  </div>
                 </div>
                 <div class="footer">
                   <button class="btn btn-primary" (click)="redirectToItems(bucket.bucketlist_id)" >
@@ -67,213 +72,3 @@
     </div>
   </div>
 </div>
-
-<!--<div class="container">-->
-  <!--<div class="row">-->
-    <!--<div class="col-sm-10 col-sm-offset-1">-->
-      <!--<div class="col-md-4 col-sm-6">-->
-        <!--<div class="card-container">-->
-          <!--<div class="card">-->
-            <!--<div class="front">-->
-              <!--<div class="cover">-->
-                <!--<img src="https://www.clipartsgram.com/image/129556292-kyz84k3.jpg"/>-->
-              <!--</div>-->
-              <!--<div class="user">-->
-                <!--<img class="img-circle" src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg"/>-->
-              <!--</div>-->
-              <!--<div class="content">-->
-                <!--<div class="main">-->
-                  <!--<h3 class="name">John Marvel</h3>-->
-                  <!--<p class="profession">CEO</p>-->
-                  <!--<p class="text-center">"I'm the new Sinatra, and since I made it here I can make it anywhere, yeah, they love me everywhere"</p>-->
-                <!--</div>-->
-                <!--<div class="footer">-->
-                  <!--<i class="fa fa-mail-forward"></i> Auto Rotation-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div> &lt;!&ndash; end front panel &ndash;&gt;-->
-            <!--<div class="back">-->
-              <!--<div class="header">-->
-                <!--<h5 class="motto">"To be or not to be, this is my awesome motto!"</h5>-->
-              <!--</div>-->
-              <!--<div class="content">-->
-                <!--<div class="main">-->
-                  <!--<h4 class="text-center">Job Description</h4>-->
-                  <!--<p class="text-center">Web design, Adobe Photoshop, HTML5, CSS3, Corel and many others...</p>-->
-
-                  <!--<div class="stats-container">-->
-                    <!--<div class="stats">-->
-                      <!--<h4>235</h4>-->
-                      <!--<p>-->
-                        <!--Followers-->
-                      <!--</p>-->
-                    <!--</div>-->
-                    <!--<div class="stats">-->
-                      <!--<h4>114</h4>-->
-                      <!--<p>-->
-                        <!--Following-->
-                      <!--</p>-->
-                    <!--</div>-->
-                    <!--<div class="stats">-->
-                      <!--<h4>35</h4>-->
-                      <!--<p>-->
-                        <!--Projects-->
-                      <!--</p>-->
-                    <!--</div>-->
-                  <!--</div>-->
-
-                <!--</div>-->
-              <!--</div>-->
-              <!--<div class="footer">-->
-                <!--<div class="social-links text-center">-->
-                  <!--<a href="http://deepak646.blogspot.in/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>-->
-                  <!--<a href="http://deepak646.blogspot.in/" class="google"><i class="fa fa-google-plus fa-fw"></i></a>-->
-                  <!--<a href="http://deepak646.blogspot.in/" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div> &lt;!&ndash; end back panel &ndash;&gt;-->
-          <!--</div> &lt;!&ndash; end card &ndash;&gt;-->
-        <!--</div> &lt;!&ndash; end card-container &ndash;&gt;-->
-      <!--</div> &lt;!&ndash; end col sm 3 &ndash;&gt;-->
-      <!--&lt;!&ndash;         <div class="col-sm-1"></div> &ndash;&gt;-->
-      <!--<div class="col-md-4 col-sm-6">-->
-        <!--<div class="card-container manual-flip">-->
-          <!--<div class="card">-->
-            <!--<div class="front">-->
-              <!--<div class="cover">-->
-                <!--<img src="https://www.clipartsgram.com/image/124089475-california-beaches-tumblr-wallpaper-3.jpg"/>-->
-              <!--</div>-->
-              <!--<div class="user">-->
-                <!--<img class="img-circle" src="http://www.outbrain.com/risingstars/wp-content/uploads/708x708-RS-Profile-Ashley-Callahan-400x400.jpg"/>-->
-              <!--</div>-->
-              <!--<div class="content">-->
-                <!--<div class="main">-->
-                  <!--<h3 class="name">Andrew Mike</h3>-->
-                  <!--<p class="profession">Web Developer</p>-->
-                  <!--<p class="text-center">"Lamborghini Mercy <br>Your chick she so thirsty <br>I'm in that two seat Lambo"</p>-->
-                <!--</div>-->
-                <!--<div class="footer">-->
-                  <!--<button class="btn btn-simple" onclick="rotateCard(this)">-->
-                    <!--<i class="fa fa-mail-forward"></i> Manual Rotation-->
-                  <!--</button>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div> &lt;!&ndash; end front panel &ndash;&gt;-->
-            <!--<div class="back">-->
-              <!--<div class="header">-->
-                <!--<h5 class="motto">"To be or not to be, this is my awesome motto!"</h5>-->
-              <!--</div>-->
-              <!--<div class="content">-->
-                <!--<div class="main">-->
-                  <!--<h4 class="text-center">Job Description</h4>-->
-                  <!--<p class="text-center">Web design, Adobe Photoshop, HTML5, CSS3, Corel and many others...</p>-->
-
-                  <!--<div class="stats-container">-->
-                    <!--<div class="stats">-->
-                      <!--<h4>235</h4>-->
-                      <!--<p>-->
-                        <!--Followers-->
-                      <!--</p>-->
-                    <!--</div>-->
-                    <!--<div class="stats">-->
-                      <!--<h4>114</h4>-->
-                      <!--<p>-->
-                        <!--Following-->
-                      <!--</p>-->
-                    <!--</div>-->
-                    <!--<div class="stats">-->
-                      <!--<h4>35</h4>-->
-                      <!--<p>-->
-                        <!--Projects-->
-                      <!--</p>-->
-                    <!--</div>-->
-                  <!--</div>-->
-
-                <!--</div>-->
-              <!--</div>-->
-              <!--<div class="footer">-->
-                <!--<button class="btn btn-simple" rel="tooltip" title="Flip Card" onclick="rotateCard(this)">-->
-                  <!--<i class="fa fa-reply"></i> Back-->
-                <!--</button>-->
-                <!--<div class="social-links text-center">-->
-                  <!--<a href="http://deepak646.blogspot.in/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>-->
-                  <!--<a href="http://deepak646.blogspot.in/" class="google"><i class="fa fa-google-plus fa-fw"></i></a>-->
-                  <!--<a href="http://deepak646.blogspot.in/" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div> &lt;!&ndash; end back panel &ndash;&gt;-->
-          <!--</div> &lt;!&ndash; end card &ndash;&gt;-->
-        <!--</div> &lt;!&ndash; end card-container &ndash;&gt;-->
-      <!--</div> &lt;!&ndash; end col sm 3 &ndash;&gt;-->
-      <!--&lt;!&ndash;         <div class="col-sm-1"></div> &ndash;&gt;-->
-      <!--<div class="col-md-4 col-sm-6">-->
-        <!--<div class="card-container">-->
-          <!--<div class="card">-->
-            <!--<div class="front">-->
-              <!--<div class="cover">-->
-                <!--<img src="http://www.hdimageson.com/wp-content/uploads/2016/05/beach-images-tumblr-300x188.jpg"/>-->
-              <!--</div>-->
-              <!--<div class="user">-->
-                <!--<img class="img-circle" src="https://1.bp.blogspot.com/-aruLLVlXyJM/V_t-TxTncZI/AAAAAAAAJ3k/hnQKKVmKuOY_awf1nHGTsukGfw4qrde-gCLcB/s400/2.jpg"/>-->
-              <!--</div>-->
-              <!--<div class="content">-->
-                <!--<div class="main">-->
-                  <!--<h3 class="name">Inna Corman</h3>-->
-                  <!--<p class="profession">Product Manager</p>-->
-
-                  <!--<p class="text-center">"I'm the new Sinatra, and since I made it here I can make it anywhere, yeah, they love me everywhere"</p>-->
-                <!--</div>-->
-                <!--<div class="footer">-->
-                  <!--<div class="rating">-->
-                    <!--<i class="fa fa-mail-forward"></i> Auto Rotation-->
-                  <!--</div>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div> &lt;!&ndash; end front panel &ndash;&gt;-->
-            <!--<div class="back">-->
-              <!--<div class="header">-->
-                <!--<h5 class="motto">"To be or not to be, this is my awesome motto!"</h5>-->
-              <!--</div>-->
-              <!--<div class="content">-->
-                <!--<div class="main">-->
-                  <!--<h4 class="text-center">Job Description</h4>-->
-                  <!--<p class="text-center">Web design, Adobe Photoshop, HTML5, CSS3, Corel and many others...</p>-->
-
-                  <!--<div class="stats-container">-->
-                    <!--<div class="stats">-->
-                      <!--<h4>235</h4>-->
-                      <!--<p>-->
-                        <!--Followers-->
-                      <!--</p>-->
-                    <!--</div>-->
-                    <!--<div class="stats">-->
-                      <!--<h4>114</h4>-->
-                      <!--<p>-->
-                        <!--Following-->
-                      <!--</p>-->
-                    <!--</div>-->
-                    <!--<div class="stats">-->
-                      <!--<h4>35</h4>-->
-                      <!--<p>-->
-                        <!--Projects-->
-                      <!--</p>-->
-                    <!--</div>-->
-                  <!--</div>-->
-
-                <!--</div>-->
-              <!--</div>-->
-              <!--<div class="footer">-->
-                <!--<div class="social-links text-center">-->
-                  <!--<a href="http://deepak646.blogspot.in/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>-->
-                  <!--<a href="http://deepak646.blogspot.in/" class="google"><i class="fa fa-google-plus fa-fw"></i></a>-->
-                  <!--<a href="http://deepak646.blogspot.in/" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div> &lt;!&ndash; end back panel &ndash;&gt;-->
-          <!--</div> &lt;!&ndash; end card &ndash;&gt;-->
-        <!--</div> &lt;!&ndash; end card-container &ndash;&gt;-->
-      <!--</div> &lt;!&ndash; end col-sm-3 &ndash;&gt;-->
-    <!--</div> &lt;!&ndash; end col-sm-10 &ndash;&gt;-->
-  <!--</div> &lt;!&ndash; end row &ndash;&gt;-->
-  <!--<div class="space-200"></div>-->
-<!--</div>-->
