--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -31,76 +31,6 @@
   </div>
 </nav>
 
-<!--<div class="container">-->
-  <!--<div class="row">-->
-    <!--<div class="col-sm-10 col-sm-offset-1">-->
-      <!--<div class="col-md-4 col-sm-6" *ngFor="let item of allItems">-->
-        <!--<div class="card-container">-->
-          <!--<div class="card">-->
-            <!--<div class="front">-->
-              <!--<div class="cover">-->
-                <!--<img src="https://www.clipartsgram.com/image/129556292-kyz84k3.jpg"/>-->
-              <!--</div>-->
-              <!--<div class="content">-->
-                <!--<div class="main">-->
-                  <!--<h3 class="name">{{item.item_name}}</h3>-->
-                  <!--<p class="profession">{{item.date_created}}</p>-->
-                  <!--<p class="profession">{{item.done ? 'DONE': 'INCOMPLETE'}}</p>-->
-                <!--</div>-->
-                <!--<div class="footer">-->
-                  <!--<button class="btn btn-primary">-->
-                    <!--<i class="fa fa-mail-forward"></i> View details-->
-                  <!--</button>-->
-                <!--</div>-->
-              <!--</div>-->
-              <!--<div class="back">-->
-                <!--<div class="header">-->
-                  <!--<h5 class="motto">"To be or not to be, this is my awesome motto!"</h5>-->
-                <!--</div>-->
-                <!--<div class="content">-->
-                  <!--<div class="main">-->
-                    <!--<h4 class="text-center">Description</h4>-->
-                    <!--<p class="text-center">{{item.description}}</p>-->
-
-                    <!--<div class="stats-container">-->
-                      <!--<div class="stats">-->
-                        <!--<h4>235</h4>-->
-                        <!--<p>-->
-                          <!--Followers-->
-                        <!--</p>-->
-                      <!--</div>-->
-                      <!--<div class="stats">-->
-                        <!--<h4>114</h4>-->
-                        <!--<p>-->
-                          <!--Following-->
-                        <!--</p>-->
-                      <!--</div>-->
-                      <!--<div class="stats">-->
-                        <!--<h4>35</h4>-->
-                        <!--<p>-->
-                          <!--Projects-->
-                        <!--</p>-->
-                      <!--</div>-->
-                    <!--</div>-->
-
-                  <!--</div>-->
-                <!--</div>-->
-                <!--<div class="footer">-->
-                  <!--<div class="social-links text-center">-->
-                    <!--<a href="http://deepak646.blogspot.in/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>-->
-                    <!--<a href="http://deepak646.blogspot.in/" class="google"><i class="fa fa-google-plus fa-fw"></i></a>-->
-                    <!--<a href="http://deepak646.blogspot.in/" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>-->
-                  <!--</div>-->
-                <!--</div>-->
-              <!--</div>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
 <div class="container">
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
@@ -198,7 +128,31 @@
             </div>
           </div><!-- end of modal -->
 
-      </div><!-- end col sm 3 -->
-    </div><!-- end col-sm-10 -->
+        </div><!-- end col sm 3 -->
+        <!--<div class="col-md-9 col-sm-8" *ngIf="allItems.length == 0">-->
+          <!--<div class="card-container manual-flip">-->
+            <!--<div class="card">-->
+              <!--<div class="front">-->
+                <!--<div class="cover">-->
+                  <!--<img src="../../img/coverpage/sky-diving.jpg"/>-->
+                <!--</div>-->
+                <!--<div class="content">-->
+                  <!--<div class="main text-center">-->
+                    <!--<h3 class="name">No item was added</h3>-->
+                    <!--<p class="text-center">-->
+                      <!--Add item to bucketlist to start-->
+                    <!--</p>-->
+                  <!--</div>-->
+                  <!--<div class="footer">-->
+                    <!--<button class="btn btn-primary" routerLink="/bucketlist" >-->
+                      <!--<i class="fa fa-plus"></i> Create item-->
+                    <!--</button>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      </div><!-- end col-sm-10 -->
   </div><!-- end row -->
 </div><!-- end container -->
