--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -34,7 +34,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
-      <div class="col-md-4 col-sm-6" *ngFor="let bucket of allBucketlists">
+      <div class="col-md-4 col-sm-6" *ngFor="let bucket of allSearchBucketlists">
         <div class="card-container manual-flip">
           <div class="card">
             <div class="front">
@@ -69,7 +69,7 @@
           </div>
         </div>
       </div>
-      <!--<div class="col-md-9 col-sm-8" *ngIf="allBucketlists == 0">-->
+      <!--<div class="col-md-9 col-sm-8" *ngIf="allSearchBucketlists.length == 0">-->
         <!--<div class="card-container manual-flip">-->
           <!--<div class="card">-->
             <!--<div class="front">-->
@@ -78,14 +78,11 @@
               <!--</div>-->
               <!--<div class="content">-->
                 <!--<div class="main text-center">-->
-                  <!--<h3 class="name">No bucket list added</h3>-->
-                  <!--<p class="text-center">-->
-                    <!--Add bucketlist to start using the app-->
-                  <!--</p>-->
+                  <!--<h3 class="name">No bucket list with search value found</h3>-->
                 <!--</div>-->
                 <!--<div class="footer">-->
-                  <!--<button class="btn btn-primary" routerLink="/create_bucketlist" >-->
-                    <!--<i class="fa fa-plus"></i> Create bucketlist-->
+                  <!--<button class="btn btn-primary" routerLink="/bucketlist" >-->
+                    <!--<i class="fa fa-plus"></i> Back to bucketlist-->
                   <!--</button>-->
                 <!--</div>-->
               <!--</div>-->
