--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -22,14 +22,14 @@
 
 <div class="container">
 
-  <form class="form-signin">
+  <form class="form-signin" (submit)="register()">
     <h1 class="form-signin-heading text-muted sign-in-text"><i class='fa fa-user-circle'></i> Sign up</h1>
-    <input type="text" class="form-control" placeholder="First Name" required="" autofocus="">
-    <input type="text" class="form-control" placeholder="Last Name" required="" autofocus="">
-    <input type="text" class="form-control" placeholder="Username" required="" autofocus="">
-    <input type="text" class="form-control" placeholder="Email Address" required="" autofocus="">
-    <input type="password" class="form-control" placeholder="Password" required="">
-    <input type="password" class="form-control" placeholder="Confirm Password" required="">
+    <input type="text" class="form-control" placeholder="First Name" required="" autofocus="" name="first_name" [(ngModel)]="first_name">
+    <input type="text" class="form-control" placeholder="Last Name" required="" autofocus="" [(ngModel)]="last_name" name="last_name">
+    <input type="text" class="form-control" placeholder="Username" required="" autofocus="" [(ngModel)]="username" name="username">
+    <input type="text" class="form-control" placeholder="Email Address" required="" autofocus="" [(ngModel)]="email" name="email">
+    <input type="password" class="form-control" placeholder="Password" required="" [(ngModel)]="password" name="password">
+    <input type="password" class="form-control" placeholder="Confirm Password" required="" [(ngModel)]="confirm" name="confirm">
     <button class="btn btn-lg btn-primary btn-block" type="submit">
       Register
     </button>
