[Feature] add search functionality

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
 <div class="container">
 
   <form class="form-signin" (submit)="signIn()">
-    <h1 class="form-signin-heading text-muted sign-in-text"><i class='fa fa-lock'></i> Sign in {{loginResponse}}</h1>
+    <h1 class="form-signin-heading text-muted sign-in-text"><i class='fa fa-lock'></i> Sign in</h1>
     <input type="text" class="form-control" placeholder="Username" name="username" required="" autofocus=""
            [(ngModel)]="username">
     <input type="password" class="form-control" placeholder="Password" required="" name="password"
