--- a/src/app/tiles/tiles.component.css
+++ b/src/app/tiles/tiles.component.css
@@ -6237,3 +6237,40 @@ pre.prettyprint{
 .btn {
     text-transform: none;
 }
+
+/* Message Alert */
+.alert-message
+{
+    margin: 20px 0;
+    padding: 20px;
+    border-left: 3px solid #eee;
+}
+.alert-message h4
+{
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+.alert-message p:last-child
+{
+    margin-bottom: 0;
+}
+.alert-message code
+{
+    background-color: #fff;
+    border-radius: 3px;
+}
+.alert-message-warning
+{
+    background-color: #fcf8f2;
+    border-color: #f0ad4e;
+}
+.alert-message-warning h4
+{
+    color: #f0ad4e;
+}
+
+/* Pages */
+.bucketlist-pages {
+  left: 0;
+  top: 98%;
+}
