--- a/src/app/items/items.component.css
+++ b/src/app/items/items.component.css
@@ -7135,3 +7135,34 @@ box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.16);
 .close {
   color: #ffffff;
 }
+
+/* Message Alert */
+.alert-message
+{
+    margin: 20px 0;
+    padding: 20px;
+    border-left: 3px solid #eee;
+}
+.alert-message h4
+{
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+.alert-message p:last-child
+{
+    margin-bottom: 0;
+}
+.alert-message code
+{
+    background-color: #fff;
+    border-radius: 3px;
+}
+.alert-message-warning
+{
+    background-color: #fcf8f2;
+    border-color: #f0ad4e;
+}
+.alert-message-warning h4
+{
+    color: #f0ad4e;
+}
