[Bug] fix search result view items button

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -48,7 +48,7 @@
                 <h3 class="lead search-head">
                   {{bucket.bucketlist_name}}
                 </h3>
-                <a class="btn btn-info dropdown-search-btn search-btn-view-details" data-dismiss="modal" (click)="redirectToItems(bucket.bucketlist_id)">View items</a>
+                <a class="btn btn-info dropdown-search-btn search-btn-view-details" data-dismiss="modal" (click)="redirectToItems(bucket.bucketlist_id, 1)">View items</a>
                 <div class="btn-group">
                   <a class="btn btn-info dropdown-search-btn">More Actions</a>
                   <a class="btn btn-info dropdown-toggle search-dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></a>
