--- a/src/app/create-item/create-item.component.html
+++ b/src/app/create-item/create-item.component.html
@@ -1,5 +1,5 @@
 
-<div class="alert alert-dismissible alert-info">
+<div class="alert alert-dismissible alert-info" *ngIf="response_message">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   {{response_message}}
 </div>
