--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,4 +1,9 @@
 <div class="container">
+  <div class="row" *ngIf="item_response_message">
+    <div class="alert alert-info">
+      {{item_response_message}}
+    </div>
+  </div>
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
       <div *ngIf="pageItems.length">
