--- a/src/app/tiles/tiles.component.html
+++ b/src/app/tiles/tiles.component.html
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <div *ngIf="pageBucket.length < 0">
+      <div *ngIf="pageBucket.length == 0">
         <div class="col-sm-10 col-md-10">
             <div class="alert-message alert-message-warning">
                 <h4>
